# Generated by Django 6.0.4 on 2026-04-29 22:39

import django.db.models.deletion
import django.utils.timezone
import src.applications.main.modules.account.user.models.model_user
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Product',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=255)),
                ('description', models.TextField()),
                ('category', models.CharField(choices=[('FRUITS_AND_VEGETABLES', 'Frutas y vegetales'), ('LACTEOUS', 'Lacteos'), ('GROCERY_AND_GOURMET', 'Grocery & Gourmet Food'), ('ELECTRONIC_AND_TECH', 'Electronics & Tech'), ('CLOTHING', 'Clothing'), ('SHOES', 'Shoes'), ('JEWELRY', 'Jewelry'), ('HOME_AND_KITCHEN', 'Home & Kitchen'), ('TOOLS_AND_HOME_IMPROVEMENT', 'Tools & Home Improvement'), ('FURNITURE', 'Furniture'), ('BOOKS', 'Books'), ('VIDEO_GAMES', 'Video Games'), ('MUSIC', 'Music'), ('MOVIES_AND_TV', 'Movies & TV'), ('BEAUTY_AND_PERSONAL_CARE', 'Beauty & Personal Care'), ('HEALTH_AND_HOUSEHOLD', 'Health & Household'), ('TOYS_AND_GAMES', 'Toys & Games'), ('BABY_PRODUCTS', 'Baby Products'), ('SPORTS_AND_OUTDOORS', 'Sports & Outdoors'), ('AUTOMOTIVE', 'Automotive'), ('PET_SUPPLIES', 'Pet Supplies'), ('OFFICE_PRODUCTS', 'Office Products'), ('INDUSTRIAL_AND_SCIENTIFIC', 'Industrial & Scientific')], max_length=40)),
                ('status', models.CharField(choices=[('ACTIVE', 'Active'), ('DEACTIVATED', 'Deactivated')], default='ACTIVE', max_length=20)),
                ('brand', models.CharField(max_length=255)),
                ('image', models.ImageField(blank=True, null=True, upload_to='products/')),
            ],
        ),
        migrations.CreateModel(
            name='Provider',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=255)),
                ('phone_number', models.CharField(max_length=50)),
                ('address', models.CharField(max_length=255)),
                ('email', models.EmailField(max_length=254)),
                ('description', models.TextField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('first_name', models.CharField(max_length=150)),
                ('last_name', models.CharField(max_length=150)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('status', models.CharField(choices=[('active', 'Active'), ('deactivated', 'Deactivated'), ('deleted', 'Deleted')], default='active', max_length=20)),
                ('role', models.CharField(choices=[('customer', 'Customer'), ('employee', 'Employee')], default='customer', max_length=20)),
                ('is_active', models.BooleanField(default=True)),
                ('is_staff', models.BooleanField(default=False)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Customer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('phone', models.CharField(blank=True, max_length=20, null=True)),
                ('address', models.TextField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='customer_profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Employee',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('position', models.CharField(choices=[('admin', 'System Administrator'), ('store_manager', 'Store Manager'), ('order_manager', 'Order Manager'), ('inventory_manager', 'Inventory Manager'), ('customer_support', 'Customer Support'), ('logistics', 'Logistics / Shipping'), ('content_manager', 'Content Manager'), ('finance', 'Finance / Accounting')], default='store_manager', max_length=20)),
                ('hired_at', models.DateTimeField(auto_now_add=True)),
                ('is_active', models.BooleanField(default=True)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='employee_profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Price',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('value', models.DecimalField(decimal_places=2, max_digits=10)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('product', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='prices', to='main.product')),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Batch',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('unitperbatch', models.IntegerField()),
                ('acquisition_price', models.FloatField()),
                ('datetime', models.DateTimeField(blank=True, null=True)),
                ('accepted_by', models.ForeignKey(blank=True, limit_choices_to={'role': src.applications.main.modules.account.user.models.model_user.UserRoles['CUSTOMER']}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='accepted_batches', to=settings.AUTH_USER_MODEL)),
                ('provider', models.ForeignKey(blank=True, limit_choices_to={'role': src.applications.main.modules.account.user.models.model_user.UserRoles['CUSTOMER']}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='provided_batches', to=settings.AUTH_USER_MODEL)),
                ('product', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='main.product')),
            ],
            options={
                'db_table': 'batch',
            },
        ),
        migrations.CreateModel(
            name='StockEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('metric_unit', models.CharField(help_text='unit, pound, bottle, etc.', max_length=50)),
                ('quantity', models.PositiveIntegerField()),
                ('cost_per_unit', models.DecimalField(decimal_places=2, max_digits=10)),
                ('received_at', models.DateTimeField(auto_now_add=True)),
                ('note', models.TextField(blank=True, null=True)),
                ('added_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='main.employee')),
                ('product', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='receipts', to='main.product')),
                ('provider', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='receipts', to='main.provider')),
            ],
        ),
    ]
