Table user{
  id int [pk]
  first_name varchar
  last_name varchar
}

Table customer{
  id int [pk]
  user int [ref: - user.id]
}

Table employee{
  id int [pk]
  user int [ref: - user.id]
  position varchar [note: "ADMIN, Inventory manager, customer manager, product logistics, marketing"]
}

Table product {
  id int [pk]
  metric_unit varchar [note: "pounds, units, bottles, pair"]
  nombre varchar
  descripcion varchar
}

table selling_price{
  id int [pk]
  product int [ref: > product.id]
  set_by int [ref: > employee.id]
}


Table provider{
  id int [pk]
  nombre varchar
  correo varcahr
}

Table stock_purchase {
  id int [pk]
  provider int [ref: > provider.id]
  purchese_price boolean
  reference_doc varchar
  description varchar
  added_by int [ref: > employee.id]
}

Table stock_entry{
  id int [pk]
  purchese_receipt int [ref: - stock_purchase.id]
  product int [ref: >product.id]
  quantity int 
}

Table order {
  id int [pk]
  customer int [ref:- customer.id]
  fecha datetime 
  // payment method
}

Table order_products{
  id int [pk]
  order int [ref: - order.id]
  product int [ref: > product.id]
}

Table sale{
  // when a customer makes a purchase
  id int [pk]
  customer int [ref: > customer.id]
  product int [ref: >product.id]
  quantity int
  date datetime
}

Table stock_movement{
  id int [pk]
  date_time datetime
  product int [ref: >product.id]
  movement_type varchar [note: "initial_inventory, purchase_entry, customer_sell"]
  document_reference varchar
  quantity int
  Balance int
}
